0.95a	Fixed problem with global map variables. Oops.

0.95	KNOWN ISSUE - ININFOURL/OUTINFOURL, INOVERLIBGRAPH/OUTOVERLIBGRAPH are not handled well by the editor. If you edit a map that uses these, 
		then the 'in' side of the link will be copied to the 'out' side. New editor will handle this better.
	
	ADDED - You can add a 'tag' to a SCALE line, to be used in ICON or LABELs later.
    ADDED - USEICONSCALE - colorize icon images (based on patches from llow)
	ADDED - screenshot mode. "SET screenshot_mode 1" at the top of the map will anonymise all labels, comments and bwlabels.
	ADDED - LABELFONTCOLOR can use a special value of 'contrast' to always contrast with the label colour.
	ADED - Artificial Icons. Special icon 'filenames' - 'box' 'round' 'rbox' create a shaped icon without any file.
	ADDED - Map titles show up in browser title now.
	ADDED - a basic 'live view' function which generates a map on demand. Sometimes. It's not very useful.
	ADDED - LABELANGLE allows you to rotate node labels to 90,180,270 degrees. Needs truetype font.
	ADDED - improved data-source picker in editor: host filter
	ADDED - improved data-source picker in editor: option to aggregate data sources
	ADDED - Moved data-source picker changes across into the graph-picker for NODEs too.
	ADDED - SPLITPOS keyword to control position of midpoint in links
	ADDED - VIAs can be positioned relative to NODEs (like NODEs can) (thanks again to llow) 
	ADDED - Weathermap has a hook in the map viewing page to allow other plugins to add code there
	ADDED - .htaccess files bundled with Weathermap to restrict direct access to configs and output
	ADDED - filenames for output are much less guessable now (may break external references to maps)
	ADDED - You can use 'DUPLEX half' on a link to make the bandwidth percentage
	        calculate work for half-duplex links
	ADDED - ININFOURL/OUTINFOURL, INOVERLIBGRAPH/OUTOVERLIBGRAPH, INNOTES/OUTNOTES 